Fix reff btntop index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
 layout: default
 ---
+<!-- TAMBAHAN UNTUK IEEE BOX -->
+<div class="tocContainer" style="display:block" border="0">
+	<h4> IEEE Explorer untuk Download PDF </h4>
+
+	{% include ie-url.html %}
+
+</div>
+<!-- END UNTUK IEEE BOX -->
+
 <!-- Posts -->
 <ul id="posts">
 
@@ -15,3 +24,4 @@ layout: default
     {% endfor %}
 
 </ul>
+
